--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RPyGeo
 Type: Package
 Title: ArcGIS Geoprocessing in R via Python
-Version: 0.9-0
-Date: 2007-09-18
+Version: 0.9-1
+Date: 2009-03-01
 Author: Alexander Brenning
 Maintainer: Alexander Brenning <brenning@uwaterloo.ca>
 Description: Provide access to (virtually any) ArcGIS Geoprocessing
@@ -11,6 +11,7 @@ Description: Provide access to (virtually any) ArcGIS Geoprocessing
         >=9.2, a suitable version of Python (currently 2.4), and
         Windows.
 License: GPL
+Depends: shapefiles, RSAGA
 SystemRequirements: Windows, Python 2.4.0, ArcGIS (>= 9.2)
-Packaged: Tue Sep 18 23:09:01 2007; brenning
+Packaged: Tue Mar 3 10:10:59 2009; brenning
 OS_type: windows
