--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: RPyGeo
 Type: Package
 Title: ArcGIS Geoprocessing in R via Python
-Version: 0.9-1
-Date: 2009-03-01
+Version: 0.9-2
+Date: 2010-08-25
 Author: Alexander Brenning
 Maintainer: Alexander Brenning <brenning@uwaterloo.ca>
 Description: Provide access to (virtually any) ArcGIS Geoprocessing
@@ -13,5 +13,7 @@ Description: Provide access to (virtually any) ArcGIS Geoprocessing
 License: GPL
 Depends: shapefiles, RSAGA
 SystemRequirements: Windows, Python 2.4.0, ArcGIS (>= 9.2)
-Packaged: Tue Mar 3 10:10:59 2009; brenning
+Packaged: 2010-08-26 03:43:21 UTC; !brenning
 OS_type: windows
+Repository: CRAN
+Date/Publication: 2010-08-26 06:42:37
