--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,19 +1,20 @@
 Package: RPyGeo
 Type: Package
 Title: ArcGIS Geoprocessing in R via Python
-Version: 0.9-2
-Date: 2010-08-25
+Version: 0.9-3
+Date: 2011-09-07
 Author: Alexander Brenning
 Maintainer: Alexander Brenning <brenning@uwaterloo.ca>
 Description: Provide access to (virtually any) ArcGIS Geoprocessing
         tool from within R by running Python geoprocessing scripts
         without writing Python code or touching ArcGIS. Requires ArcGIS
-        >=9.2, a suitable version of Python (currently 2.4), and
-        Windows.
+        >=9.2, a suitable version of Python (for ArcGIS 9.2: Python
+        2.4; for ArcGIS 10.0: 2.6), and Windows.
 License: GPL
 Depends: shapefiles, RSAGA
-SystemRequirements: Windows, Python 2.4.0, ArcGIS (>= 9.2)
-Packaged: 2010-08-26 03:43:21 UTC; !brenning
+SystemRequirements: Windows, Python (>= 2.4.0), ArcGIS (>= 9.2)
+Packaged: 2012-10-29 08:57:32 UTC; ripley
 OS_type: windows
 Repository: CRAN
-Date/Publication: 2010-08-26 06:42:37
+Date/Publication: 2012-10-29 08:57:32
+X-CRAN-Original-OS_type: windows
